tests/diagnostics/method_on_non_struct.kal
# Methods can only be called on struct/enum values.
{ let n: i64 = 5; printi(n.foo()); };
